// server/proto/problem_gen.proto
syntax = "proto3";

package problemgen;
option go_package = "./server/proto;proto";

// Request to generate a math problem set
message GenerateRequest {
  string name = 1;
  string gender = 2;
  string operation = 3;
  int32 num_problems = 4;
  int32 max_number = 5;
  repeated string likes_nouns = 6;
  repeated string likes_verbs = 7;
}

// Single math problem
message Problem {
  int32 index = 1;
  string theme = 2;
  string text = 3;
  repeated int32 numbers = 4;
  string operation = 5;
  string answer = 6;
}

// Set of problems plus original request
message ProblemSet {
  repeated Problem problems = 1;
  GenerateRequest meta = 2;
}

// Response containing generated PDF bytes
message PDFResponse {
  bytes pdf = 1;
  string filename = 2;
}

// Generator service definition
service Generator {
  // Generate a set of math problems based on user preferences
  rpc GenerateProblemSet(GenerateRequest) returns (ProblemSet);
  // Generate both problems and a PDF file containing them
  rpc GenerateProblemSetPDF(ProblemSet) returns (PDFResponse);
}